# basic-tf

./: 02_tensors.py  03_ffn.py  04_regression.py  05_cnn.py  06_save_load.py  07_example.py  07_functional.py  08_project.py  10_rnn.py  11_nlp.py  nn.h5  pyproject.toml
neural_net/: fingerprint.pb  keras_metadata.pb  saved_model.pb
neural_net/variables/: variables.data-00000-of-00001  variables.index
